update:优化了房间模块